# gz_sim_proj

./: .gitignore  CMakeLists.txt  README.md  activate.sh
models/simple_vehicle/: model.config  model.sdf
scripts/: control_fan.sh
src/: CMakeLists.txt  sim_projConfig.cmake.in
src/lidar_node/: CMakeLists.txt
world/: my_world.sdf  sensor_world.sdf
